--- a/lab5/app/build.gradle
+++ b/lab5/app/build.gradle
@@ -92,9 +92,9 @@ dependencies {
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
 
-    //Paging
-    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
-    testImplementation "androidx.paging:paging-common-ktx:$pagingVersion"
+//    Paging
+//    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
+//    testImplementation "androidx.paging:paging-common-ktx:$pagingVersion"
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.3"
