--- a/lab5/app/build.gradle
+++ b/lab5/app/build.gradle
@@ -34,7 +34,7 @@ android {
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    def roomVersion = "2.4.0-alpha03" // check latest version from docs
+    def roomVersion = "2.5.0-beta02" // check latest version from docs
 
 
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -56,7 +56,7 @@ dependencies {
     releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 
     //Kotlin Serialization - to parce JSON
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
